--- a/dialogs/image/image.css
+++ b/dialogs/image/image.css
@@ -2,11 +2,11 @@
 /* dialog样式 */
 .wrapper {
     zoom: 1;
-    width: 630px;
-    *width: 626px;
-    height: 380px;
+    width: 596px;
+    *width: 592px;
+    height: 360px;
     margin: 0 auto;
-    padding: 10px;
+    padding: 20px;
     position: relative;
     font-family: sans-serif;
 }
@@ -106,19 +106,22 @@
 #remote .left{
     display: block;
     float: left;
-    width: 300px;
+    width: 240px;
     height:10px;
 }
 #remote .right{
     display: block;
     float: right;
-    width: 300px;
+    width: 295px;
     height:10px;
 }
 #remote .row{
-    margin-left: 20px;
+    /*margin-left: 20px;*/
     clear: both;
-    height: 40px;
+    height: 60px;
+}
+#remote .row.desc{
+    vertical-align: top;
 }
 
 #remote .row label{
@@ -129,6 +132,9 @@
     display:inline-block;
     vertical-align: middle;
 }
+#remote .row.desc label{
+    vertical-align: top;
+}
 #remote .row label.algnLabel{
     float: left;
 
@@ -136,7 +142,7 @@
 
 #remote input.text{
     width: 150px;
-    padding: 3px 6px;
+    padding: 8px 6px;
     font-size: 14px;
     line-height: 1.42857143;
     color: #555;
@@ -155,21 +161,43 @@
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
 }
+#remote textarea.text{
+    width: 150px;
+    padding: 8px 6px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    resize: none;
+}
+#remote textarea.text:focus {
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
+}
 #remote #url{
-    width: 500px;
+    width: 525px;
     margin-bottom: 2px;
 }
 #remote #width,
 #remote #height{
     width: 20px;
-    margin-left: 2px;
-    margin-right: 2px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 #remote #border,
 #remote #vhSpace,
 #remote #title{
-    width: 180px;
-    margin-right: 5px;
+    width: 145px;
+    margin-right: 8px;
 }
 #remote #lock{
 }
@@ -177,18 +205,18 @@
     zoom: 1;
     _display:inline;
     display: inline-block;
-    width: 20px;
+    /*width: 20px;*/
     height: 20px;
-    background: url("../../themes/default/images/lock.gif") -13px -13px no-repeat;
+    /*background: url("../../themes/default/images/lock.gif") -13px -13px no-repeat;*/
     vertical-align: middle;
 }
 #remote #preview{
     clear: both;
-    width: 260px;
-    height: 240px;
+    width: 295px;
+    height: 190px;
     z-index: 9999;
-    margin-top: 10px;
-    background-color: #eee;
+    /*margin-top: 10px;*/
+    background-color: #f3f3f3;
     overflow: hidden;
 }
 
