修改 neditor显示窗口部分图标，修改其样式

--- a/themes/ibenchu/css/style.css
+++ b/themes/ibenchu/css/style.css
@@ -31,7 +31,7 @@
   content: "\e9c4";
 }
 .icon-strikethrough:before {
-  /*content: "\e9c5";*/
+  content: "\e9c5";
 }
 .icon-icon_画板_02-35:before {
   content: "\e9c6";
@@ -70,7 +70,7 @@
   content: "\e909";
 }
 .icon-fontborder:before {
-  /*content: "\e90a";*/
+  content: "\e966";
 }
 .icon-formatmatch:before {
   content: "\e90b";
@@ -247,7 +247,7 @@
   content: "\e936";
 }
 .icon-subscript:before {
-  /*content: "\e937";*/
+  content: "\e937";
 }
 .icon-superscript:before {
   content: "\e938";
