修改 页面间距及提示信息样式

--- a/themes/ibenchu/css/style.css
+++ b/themes/ibenchu/css/style.css
@@ -23,7 +23,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.edui-icon {
+    font-size: 18px;
+}
 .icon-clock:before {
   content: "\e9c3";
 }
