--- a/dialogs/image/image.css
+++ b/dialogs/image/image.css
@@ -2,7 +2,7 @@
 /* dialog样式 */
 .wrapper {
     zoom: 1;
-    width: 580px;
+    width: 600px;
     *width: 592px;
     height: 412px;
     margin: 0 auto;
@@ -101,7 +101,7 @@
 
 #remote .top{
     width: 100%;
-    margin-top: 25px;
+    margin-top: 20px;
 }
 #remote .left{
     display: block;
@@ -117,8 +117,11 @@
 }
 #remote .row{
     /*margin-left: 20px;*/
+    display: flex;
     clear: both;
-    height: 60px;
+    height: 30px;
+    line-height: 30px;
+    margin-bottom: 20px;
 }
 #remote .row.desc{
     vertical-align: top;
@@ -131,6 +134,7 @@
     _display: inline;
     display:inline-block;
     vertical-align: middle;
+    margin-right: 10px;
 }
 #remote .row.desc label{
     vertical-align: top;
@@ -142,7 +146,6 @@
 
 #remote input.text{
     width: 150px;
-    padding: 8px 6px;
     font-size: 14px;
     line-height: 1.42857143;
     color: #555;
@@ -184,14 +187,20 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
 }
 #remote #url{
-    width: 525px;
-    margin-bottom: 2px;
+    width: 542px;
+    height: 28px;
 }
 #remote #width,
 #remote #height{
-    width: 20px;
+    width: 60px;
+    height: 28px;
     margin-left: 8px;
     margin-right: 8px;
+}
+#remote .row:nth-child(1) span ,
+#remote .row:nth-child(2) span {
+    display: block;
+    margin-right: 18px;
 }
 #remote #border,
 #remote #vhSpace,
