--- a/dialogs/image/image.css
+++ b/dialogs/image/image.css
@@ -33,7 +33,7 @@
 
 .tabbody .panel.focus {
     width: 100%;
-    height: 346px;
+    height: 380px;
     display: block;
 }
 
@@ -112,7 +112,7 @@
 #remote .right{
     display: block;
     float: right;
-    width: 295px;
+    width: 345px;
     height:10px;
 }
 #remote .row{
@@ -145,6 +145,7 @@
 }
 
 #remote input.text{
+    height: 28px;
     width: 150px;
     font-size: 14px;
     line-height: 1.42857143;
@@ -165,8 +166,8 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
 }
 #remote textarea.text{
-    width: 150px;
-    padding: 8px 6px;
+    width: 160px;
+    height: 120px;
     font-size: 14px;
     line-height: 1.42857143;
     color: #555;
@@ -187,7 +188,7 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
 }
 #remote #url{
-    width: 542px;
+    width: 537px;
     height: 28px;
 }
 #remote #width,
@@ -197,11 +198,16 @@
     margin-left: 8px;
     margin-right: 8px;
 }
-#remote .row:nth-child(1) span ,
-#remote .row:nth-child(2) span {
+#remote .top .row:nth-child(2) span:nth-child(1) ,
+#remote .top .row:nth-child(2) span:nth-child(2) {
     display: block;
     margin-right: 18px;
 }
+
+#remote .top .row:nth-child(2) span:last-child {
+    margin-left: 15px;
+}
+
 #remote #border,
 #remote #vhSpace,
 #remote #title{
@@ -209,20 +215,21 @@
     margin-right: 8px;
 }
 #remote #lock{
+    margin-top: 11px;
 }
 #remote #lockicon{
     zoom: 1;
     _display:inline;
     display: inline-block;
-    /*width: 20px;*/
     height: 20px;
-    /*background: url("../../themes/default/images/lock.gif") -13px -13px no-repeat;*/
     vertical-align: middle;
+    margin-top: -15px;
+    margin-left: 5px;
 }
 #remote #preview{
     clear: both;
-    width: 295px;
-    height: 190px;
+    width: 345px;
+    height: 261px;
     z-index: 9999;
     /*margin-top: 10px;*/
     background-color: #f3f3f3;
