--- a/themes/ibenchu/css/ueditor.css
+++ b/themes/ibenchu/css/ueditor.css
@@ -1245,6 +1245,11 @@ div.edui-box {
     width: 400px !important;
 }
 
+.edui-dialog .edui-for-anchor .edui-dialog-body {
+    height: 178px !important;
+    width: 347px !important;
+}
+
 .edui-dialog div{
 	width:auto;
 }
